--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/website.ico.ico">
+  <meta name="description" content="Issac Chang's resume">
+  <meta name="author" content="862370836">
 
-  <title>John Doe - Business Administration</title>
+  <title>Issac Chang - Business Administration</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Issac Chang</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/IssacChang.jpg.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Issac Chang
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">Sports have always held a special place in my heart, and among the various athletic pursuits, basketball stands out as my absolute favorite. The fast-paced nature of the game, the precision required in every dribble and pass, and the exhilaration of sinking the perfect shot all contribute to its unique appeal. Whether I'm actively participating on the court or fervently cheering for my favorite teams from the sidelines, the energy and camaraderie of basketball never fail to captivate me. Additionally, the thrilling world of Formula One has become another passion of mine. The speed, precision, and strategic brilliance that define Formula One races are a testament to the pinnacle of motor racing, and I find myself drawn to the adrenaline and excitement of each Grand Prix.<br><br>
 
-        Enter bio here<br><br>
+        Beyond the realm of sports, my passion extends to the enchanting world of Taylor Swift's music. As an ardent Swiftie, I've followed her artistic journey from the heartfelt tunes of her early country days to the empowering anthems of her more recent pop albums. The emotional depth of her lyrics and the authenticity in her storytelling have created a profound connection that transcends mere fandom, turning Taylor Swift into more than just a musician but a companion through life's various chapters.<br><br>
 
-        Enter bio here
+        In the quieter moments of my free time, I indulge in two seemingly divergent yet equally fulfilling pastimes. The first involves the meticulous construction of intricate LEGO sets, where the process of assembling bricks into complex structures brings me a sense of accomplishment and joy. On the flip side, I cherish the simplicity of spending quality time with my canine companion, engaging in games of fetch, leisurely walks, and reveling in the unconditional love that only a dog can provide. Additionally, I find solace and enjoyment in the sport of bowling, a recreational activity that combines skill, precision, and a touch of friendly competition. The satisfying sound of pins crashing and the camaraderie with fellow bowlers add another layer of joy to my leisure pursuits
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://instagram.com/izeeo">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/IssacChang">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/izeeo0022">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:issacchang04@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,41 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Customer Support</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Sweet Lovely by Jen</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Assist customers with help regarding orders, shipments, and any other questions that they may have via email and phone.<br> 
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">December 2019 - August 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Senior Patrol Leader</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Boy Scouts of America</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Being a boy scout has instilled in me leadership skills and self-confidence and has taught me practical life skills that I will use in my everyday life. As the appointed senior patrol leader of my troop, I am responsible for the success of my troop, which involves encouraging teamwork and planning troop activities.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">December 2017 - April 2022</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">President</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Korean-American Youth Association</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
-
-          </p>
+            • As President of the organization, my main role consists of planning all events and activities as well as expanding the organization to other communities. With the help of the other members, I was able to put together charity fundraisers, cultural festivals and even set up an after school tutoring club for underprivileged students.<br>
+            </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2018 - June 2022</span>
           </div>
         </div>
 
@@ -152,36 +145,14 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
             <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div>Business Real-Esate</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2022 - Present</span>
           </div>
         </div>
-
+        
       </div>
     </section>
 
@@ -191,7 +162,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="kaya1.jpg" width="500px">
+            <img src="kaya2.jpg" width="500px"><br>
+            <img src="boyscout1.jpg" idth="500px">
+            <img src="boyscout2.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +173,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Issac Chang</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
